# mdslides-reveal

./: .gitmodules  mkslides.yml  pyproject.toml
.github/workflows/: publish.yml
slides/docs/: slides.md
slides/styles/: index.css  slides.css
tests/: README.md
