
[project]
name = "mkslides-reveal"
version = "0.1.21"
description = "MkSlides-Reveal - Slides with Markdown using the power of Reveal.js."
repository = "https://github.com/MartenBE/mkslides-reveal"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "emoji>=2.12.1",
    "jinja2>=3.1.4",
    "jsonschema>=4.23.0",
    "livereload>=2.7.0",
    "natsort>=8.4.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=13.8.1",
]

[project.scripts]
mkslides-reveal = "mkslides_reveal.__main__:cli"

[tool.uv]
dev-dependencies = [
    "bumpver>=2023.1129",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
    "types-pyyaml>=6.0.12.20240917",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpver]
current_version = "0.1.21"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} to {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"src/mkslides_reveal/__init__.py" = ['^__version__ = "{version}"']
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']

[tool.ruff.lint]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D103",    # Missing docstring in public function
    "D102",    # Missing docstring in public method
    "D104",    # Missing docstring in public package"
    "D107",    # Missing docstring in `__init__`
    "E501",    # Line too long
    "FA102",   # Missing `from __future__ import annotations`, but uses PEP 585 collection
    "G004",    # Logging statement uses f-string"
    "PLR0913", #  Too many arguments in function definition
    "RET504",  # Unnecessary assignment to `...` before `return` statement
    "S101",    # Use of `assert` detected
    "TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...`
    "TD003",   # Missing issue link on the line following this TODO

]
select = ["ALL"]
